@@ -18,6 +18,12 @@ public class ObjectPrxHelper extends ObjectPrxHelperBase
     }
 
     public static ObjectPrx
+    checkedCast(Ice.ObjectPrx b, java.util.Map ctx)
+    {
+	return b;
+    }
+
+    public static ObjectPrx
     checkedCast(Ice.ObjectPrx b, String f)
     {
 	ObjectPrx d = null;
@@ -27,6 +33,28 @@ public class ObjectPrxHelper extends ObjectPrxHelperBase
 	    try
 	    {
 		boolean ok = bb.ice_isA("::Object");
+		assert(ok);
+		ObjectPrxHelper h = new ObjectPrxHelper();
+		h.__copyFrom(bb);
+		d = h;
+	    }
+	    catch(Ice.FacetNotExistException ex)
+	    {
+	    }
+	}
+	return d;
+    }
+
+    public static ObjectPrx
+    checkedCast(Ice.ObjectPrx b, String f, java.util.Map ctx)
+    {
+	ObjectPrx d = null;
+	if(b != null)
+	{
+	    Ice.ObjectPrx bb = b.ice_newFacet(f);
+	    try
+	    {
+		boolean ok = bb.ice_isA("::Object", ctx);
 		assert(ok);
 		ObjectPrxHelper h = new ObjectPrxHelper();
 		h.__copyFrom(bb);
