@@ -7,7 +7,7 @@
 //
 // **********************************************************************
 
-// Generated by makeprops.py from file `PropertyNames.def', Mon Nov 29 11:38:13 2004
+// Generated by makeprops.py from file `../config/PropertyNames.def', Fri Dec  3 15:44:09 2004
 
 // IMPORTANT: Do not edit this file -- any edits made here will be lost!
 
@@ -171,9 +171,11 @@ public final class PropertyNames
         "IcePatch2.Admin.ThreadPool.SizeMax",
         "IcePatch2.Admin.ThreadPool.SizeWarn",
         "IcePatch2.Admin.ThreadPool.StackSize",
+        "IcePatch2.ChunkSize",
         "IcePatch2.Directory",
         "IcePatch2.Endpoints",
         "IcePatch2.PublishedEndpoints",
+        "IcePatch2.Thorough",
         "IcePatch2.ThreadPool.Size",
         "IcePatch2.ThreadPool.SizeMax",
         "IcePatch2.ThreadPool.SizeWarn",
