@@ -39,6 +39,24 @@ public class AllTests
         test(cl.equals(derived));
         System.out.println("ok");
 
+	System.out.print("testing checked cast with context... ");
+	System.out.flush();
+	String cref = "test:default -p 12346 -t 10000";
+	Ice.ObjectPrx cbase = communicator.stringToProxy(cref);
+	test(cbase != null);
+
+	Test.TestCheckedCastPrx tccp = Test.TestCheckedCastPrxHelper.checkedCast(cbase);
+	java.util.Map c = tccp.getContext();
+	test(c == null || c.size() == 0);
+
+	c = new java.util.HashMap();
+	c.put("one", "hello");
+	c.put("two", "world");
+	tccp = Test.TestCheckedCastPrxHelper.checkedCast(cbase, c);
+	java.util.Map c2 = tccp.getContext();
+	test(c.equals(c2));
+	System.out.println("ok");
+
         System.out.print("testing twoway operations... ");
         System.out.flush();
         Twoways.twoways(cl);
